ログイン機能を追加 (#11)
未ログイン時はrootアクセス時にloginページへ
ログイン済みの場合はprojectsページへ飛ぶように制御も追加

<img width="1918" height="516" alt="image"
src="https://github.com/user-attachments/assets/bde246d8-3c08-4706-8ebe-f5b9e683cd1d"
/>
