# backend/app/schemas/__init__.py
@@ -1,8 +1,11 @@
+from .login import LoginRequest, LoginResponse
 from .pagination import PaginatedResponse, Pagination
 from .project import ProjectCreate, ProjectDetailRead, ProjectRead, ProjectUpdate
 from .project_excel_format import ProjectExcelFormatRead
 
 __all__ = [
+    "LoginRequest",
+    "LoginResponse",
     "ProjectRead",
     "ProjectDetailRead",
     "ProjectCreate",
